<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/rating_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/rating_hint"
        android:textSize="15sp"
        android:textStyle="bold" />

    <RatingBar
        android:id="@+id/review_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="1.3"
        android:scaleY="1.3"
        android:numStars="10"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="40dp"
        style="?android:attr/ratingBarStyleSmall"
        android:isIndicator="false"
        android:stepSize="1" />

    <TextView
        android:id="@+id/review_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/review_hint"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/review_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:scrollHorizontally="false"
        android:hint="@string/review_hint"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textMultiLine" />


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/submit"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/white" />
</LinearLayout>